# sea-mt-translationese

./: .gitignore  pyproject.toml
autotuning_exps/: profile_model_info.json
autotuning_results/profile_model_info/: cmd.txt  ds_config.json  exp.json
configs/: accelerate_ds_autotuning_config.yaml  accelerate_ds_with_autotuning_config.yaml  ds_autotuning_config.json
data/parallel_asian_treebank/: test.json  train.json  valid.json
scripts/: sft.sh
src/evaluation/: eval.py  gen.py
src/train/: sft.py  utils.py
t-index/: requirements.txt
t-index/data/synthetic/enms/parallel_asian_treebank_apertus/: test.json  train.json  valid.json
t-index/data/synthetic/enms/parallel_asian_treebank_gemma/: test.json  valid.json
t-index/data/synthetic/enms/parallel_asian_treebank_qwen/: test.json  test.jsonl  train.json  valid.json  valid.jsonl
t-index/data/wild/: pairwise.jsonl  pointwise.jsonl
t-index/data/wild/enms/: source.txt
t-index/data/wild/enms/Qwen-SEA-LION-v4-32B-IT-4BIT/: pointwise.jsonl
t-index/recipes/: synthetic_enms.yaml  wild.yaml
t-index/scripts/run/: synthetic.sh  wild.sh
t-index/scripts/train/: dpo.sh  rm.sh  sft.sh  sft_domestic.sh  sft_foreign.sh  sft_lora.sh  xlmr.sh
t-index/src/: preprocess_data.py  t_index.py  utils.py
t-index/src_reproduce/: run_classification.py  score_functions.py  supervised.py  t_index.py  tv_score_utils.py  unsupervised.py  utils.py
